<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    tools:context=".ServiceActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_hint"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:layout_marginRight="10dp"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/year_search"
                android:inputType="textCapSentences"
                android:hint="@string/year_hint"
                android:imeOptions="actionSearch"
                android:layout_marginRight="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/my_spinner"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="Enter Type"
            />




<!--            <View-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="2dp"-->
<!--            android:background="@android:color/black" />-->

    </LinearLayout>


<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:paddingTop="16dp"-->
<!--        android:paddingLeft="5dp"-->
<!--        android:orientation="horizontal">-->
<!--        <Switch-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:id="@+id/my_switch"-->
<!--            android:text="Hide/Show the details of the movie" />-->
<!--    </LinearLayout>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/search_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.245"
            android:layout_marginRight="10dp"
            android:text="@string/search_button" />
        <Button
            android:id="@+id/reset_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.245"
            android:layout_marginLeft="10dp"
            android:text="@string/reset_button" />

    </LinearLayout>




    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:id="@+id/progress_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/list_item_movie"
            android:paddingBottom="28dp" />
    </FrameLayout>

</LinearLayout>